[gd_scene load_steps=9 format=3 uid="uid://bdeqltvkbli42"]

[ext_resource type="Script" uid="uid://ts02jh4a7ecp" path="res://scenes/rooms/room.gd" id="1_14vip"]
[ext_resource type="Texture2D" uid="uid://cf1sp82k6td8w" path="res://textures/texture_07.png" id="2_kna73"]
[ext_resource type="PackedScene" uid="uid://c52rmd7lh01g1" path="res://models/rooms/room1.fbx" id="3_7c2ba"]
[ext_resource type="PackedScene" uid="uid://dgmiqclso1rvn" path="res://models/rooms/room2.fbx" id="4_dgyy1"]
[ext_resource type="PackedScene" uid="uid://b8p2fjej7r5g3" path="res://models/rooms/room3.fbx" id="5_p6mdq"]
[ext_resource type="PackedScene" uid="uid://b8ofju7ysy8dm" path="res://models/rooms/room4.fbx" id="6_o3o0o"]
[ext_resource type="PackedScene" uid="uid://bya1eyltex1c6" path="res://models/rooms/room5.fbx" id="7_hkvys"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y7mhy"]
albedo_texture = ExtResource("2_kna73")

[node name="door_room" type="Node3D"]
script = ExtResource("1_14vip")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(11, 0, 0, 0, 1, 0, 0, 0, 11, 0, -0.5, 0)
use_collision = true
material = SubResource("StandardMaterial3D_y7mhy")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(10, 0, 0, 0, 0.0232307, -2.99676, 0, 0.49946, 0.139384, 0, 0.8, -5)
use_collision = true
material = SubResource("StandardMaterial3D_y7mhy")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(10, 0, 0, 0, 0.0232307, -2.99676, 0, 0.49946, 0.139384, 0, 0.8, 5)
use_collision = true
material = SubResource("StandardMaterial3D_y7mhy")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-07, -0.49946, -0.139384, 0, 0.0232307, -2.99676, 10, -2.18321e-08, -6.09269e-09, 5, 0.8, 0)
use_collision = true
material = SubResource("StandardMaterial3D_y7mhy")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-07, -0.49946, -0.139384, 0, 0.0232307, -2.99676, 10, -2.18321e-08, -6.09269e-09, -5, 0.8, 0)
use_collision = true
material = SubResource("StandardMaterial3D_y7mhy")

[node name="door_point1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.4)

[node name="door_point2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.4, 0, 0)

[node name="door_point3" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 4.4)

[node name="door_point4" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.4, 0, 0)

[node name="room1" parent="." instance=ExtResource("3_7c2ba")]
visible = false

[node name="room2" parent="." instance=ExtResource("4_dgyy1")]
visible = false

[node name="room3" parent="." instance=ExtResource("5_p6mdq")]
visible = false

[node name="room4" parent="." instance=ExtResource("6_o3o0o")]
visible = false

[node name="room5" parent="." instance=ExtResource("7_hkvys")]
visible = false
